<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Number</string>
    <string name="title_conv">Converter</string>
    <string name="title_calc">Calculator</string>
    <string name="title_new">Something</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="bt0">0</string>
    <string name="btDot">.</string>
    <string name="byMin">-</string>
    <string name="zero">0</string>
    <string name="del">Delete</string>
    <string name="bin">BIN</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="equals">=</string>
    <string name="btAdd">+</string>
    <string name="btMin">-</string>
    <string name="btMultiply">×</string>
    <string name="btDivide">÷</string>
    <string name="btA">A</string>
    <string name="btB">B</string>
    <string name="btC">C</string>
    <string name="btD">D</string>
    <string name="btE">E</string>
    <string name="btF">F</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sth">Something</string>
</resources>
