<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/resultsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:columnCount="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dec"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/toDec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:gravity="end"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:maxLength="19"
                app:fontFamily="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/toHex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:gravity="end"
                android:hint="@string/zero"
                android:inputType="text"
                android:maxLength="16"
                app:fontFamily="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bin"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/toBin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:gravity="end"
                android:hint="@string/zero"
                android:inputType="textMultiLine"
                android:maxLength="64"
                android:maxLines="3"
                app:fontFamily="monospace" />

        </GridLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/convertCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultsCard">


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/actionCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <ImageButton
                android:id="@+id/bkspButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:contentDescription="@string/del"
                android:tint="#111111"
                app:srcCompat="@android:drawable/ic_input_delete" />
        </GridLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/actionCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:columnCount="3"
                app:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt1"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt2"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt3"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt4"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt5"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt6"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt7"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt8"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt9"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/buttonZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt0"
                    app:layout_columnSpan="2"
                    app:layout_gravity="fill" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    app:layout_column="2"
                    app:layout_row="3" />
            </android.support.v7.widget.GridLayout>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_margin="5dp">
                <Button
                    android:id="@+id/buttonA"
                    android:text="@string/btA"
                    android:layout_width="48dp"
                 />
                <Button
                    android:id="@+id/buttonB"
                    android:text="@string/btB"
                    android:layout_width="48dp"
                    />
                <Button
                    android:id="@+id/buttonC"
                    android:text="@string/btC"
                    android:layout_width="48dp"
                    />
                <Button
                    android:id="@+id/buttonD"
                    android:text="@string/btD"
                    android:layout_width="48dp"
                    />
                <Button
                    android:id="@+id/buttonE"
                    android:text="@string/btE"
                    android:layout_width="48dp"
                    />
                <Button
                    android:id="@+id/buttonF"
                    android:text="@string/btF"
                    android:layout_width="48dp"
                    />

            </GridLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>





</android.support.constraint.ConstraintLayout>