<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/resultsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputs"
            android:layout_width="291dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:cursorVisible="false"
            app:fontFamily="monospace"
            android:gravity="end"
            android:hint="@string/zero"
            android:inputType="number"
            android:maxLength="16"
            android:textSize="24sp"
            tools:ignore="Autofill" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/convertCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultsCard">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hex"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bin"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toHex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="sans-serif-condensed"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/toBin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="sans-serif-condensed"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/actionCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertCard">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <ImageButton
                android:id="@+id/bkspButton"
                android:contentDescription="@string/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="#111111"
                android:layout_gravity="fill"
                app:srcCompat="@android:drawable/ic_input_delete" />
        </GridLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/numCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionCard">

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:columnCount="3"
            app:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt1"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt2"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt3"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt4"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt5"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt6"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt7"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt8"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt9"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt0"
                app:layout_columnSpan="2"
                app:layout_gravity="fill" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                app:layout_column="2"
                app:layout_row="3" />
        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/actionCard"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="290dp">

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:columnCount="1"
            app:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btAdd" />

            <Button
                android:id="@+id/buttonMin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btMin" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btMultiply" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btDivide" />
        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>